# stein_lora

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
experiments/: basic_lora.py  hf.py  llama_chat.py  lora_activation_test_basic.py  run_mrpc_test.sh  save_load_test.ipynb  svgd_adam_match_test.py  test_load_multilora_model.py  training_loop.py
experiments/job_scripts/: run_arc.sh  run_cqa.sh  run_mmlu.sh  run_obqa.sh  run_tqa.sh
experiments/lora_activations_rank/: plot.py
stein_lora/: __init__.py  multi_lora.py  sadamw.py  svgd.py  utils.py
